--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -1,28 +1,23 @@
-:root {
-    --primary-color: rgb(69, 182, 231);
-    --secondary-color: rgb(121, 212, 241);
-}
-
 .fa-external-link-alt {
     visibility: hidden;
 }
 
 /* hide everything that shouldn't print */
-header, 
-footer, 
-.cover-letter,
-.soundcloudplaylist, 
-.shadowbox > h1,
-.left-pane > .links {
+header,
+footer,
+.soundcloudplaylist,
+.shadowbox>h1 {
     display: none;
 }
 
 .local-headshot {
     width: 125px;
 }
+
 .remote-headshot {
     width: 100px;
 }
+
 .headshot {
     top: 0px;
     display: block;
@@ -34,16 +29,12 @@ footer,
 }
 
 /* Reset styles */
-h1,
-h2,
-h3, 
 p {
     margin: 0px;
 }
 
 body {
     margin: 0 10px 0 10px;
-    font-family: Arial, sans-serif;
     padding: 20px;
     /* box-sizing: border-box; */
     padding: 0;
@@ -54,10 +45,12 @@ h1 {
     font-size: xx-large;
     color: var(--primary-color);
 }
+
 h2 {
     font-size: large;
     color: var(--primary-color);
 }
+
 h3 {
     color: var(--primary-color);
 }
@@ -73,46 +66,8 @@ a:visited {
     color: var(--primary-color);
 }
 
-.page-break {
-    border: none;
-    height: 0;
-    page-break-after: always;
-}
-
-.no-page-break {
-    page-break-inside: avoid;
-}
-
 .headercontent>.address {
-    text-align: center;
     font-size: small;
-}
-
-.headercontent > .links {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    text-align: center;
-}
-
-.headercontent > .links > .table {
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 0 10px;
-}
-
-.headercontent > .links > .table >.cell {
-    padding: 0;
-    margin: 0;
-}
-
-.headercontent > .links > .table > .column-one {
-    text-align: right;
-}
-
-.headercontent > .links > .table > .column-two {
-    text-align: left;
 }
 
 .cover-letter {
@@ -125,7 +80,8 @@ a:visited {
     padding: 0 10px 0 10px;
     font-size: 1.2em;
 }
-.cover-letter-content > p {
+
+.cover-letter-content>p {
     margin: 8px 0 8px 0;
 }
 
@@ -134,13 +90,9 @@ a:visited {
     padding: 10px;
 }
 
-.shadowbox > p {
+.shadowbox>p {
     margin: 0;
     padding: 3px 5px 3px 0;
-}
-
-details {
-    margin: 5px 0 ;
 }
 
 summary::-webkit-details-marker {
@@ -148,42 +100,29 @@ summary::-webkit-details-marker {
 }
 
 details summary {
-    font-size:larger;
-    justify-content: space-between;
-    align-items: first baseline;
-    position: relative;
+    font-size: larger;
     list-style-type: none;
     padding-left: 0;
     background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
     padding: 3px;
     margin: 0;
-    color: #fff;
 }
 
-summary span.left {
-    position: absolute;
-}
-
-summary span.right {
-    position: absolute;
-    right: 5px;
-    color: #fff;
-}
-
-details > div,
-details > ul,
-details > p {
+details>div,
+details>ul,
+details>p {
     margin: 0;
 }
 
-details > p {
+details>p {
     padding: 3px 0px 3px 5px;
 }
-details > div {
+
+details>div {
     padding-left: 5px;
 }
 
-details > ul {
+details>ul {
     margin: 3px 0 3px 0;
     padding: 10px;
 }
@@ -271,13 +210,15 @@ details > ul {
     margin: 20px;
 }
 
-@page :bottom { content: none; } 
+@page :bottom {
+    content: none;
+}
 
 .page2-header {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     text-align: center;
 }
 
@@ -287,27 +228,27 @@ details > ul {
     border-radius: 50%;
 }
 
-.page2-header > .table {
+.page2-header>.table {
     display: grid;
     grid-template-columns: 100px auto 100px;
     gap: 0 10px;
     width: 100%;
 }
 
-.page2-header > .table >.cell {
+.page2-header>.table>.cell {
     padding: 0;
     margin: 0;
 }
 
-.page2-header > .table > .column-one {
+.page2-header>.table>.column-one {
     text-align: left;
 }
 
-.page2-header > .table > .column-two {
+.page2-header>.table>.column-two {
     text-align: center;
 }
 
-.page2-header > .table > .column-three {
+.page2-header>.table>.column-three {
     text-align: right;
 }
 
@@ -316,26 +257,26 @@ details > ul {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     text-align: center;
 }
 
-.page2-header .links > .table {
+.page2-header .links>.table {
     display: grid;
     grid-template-columns: auto auto;
     gap: 0 10px;
 }
 
-.page2-header .links > .table >.cell {
+.page2-header .links>.table>.cell {
     padding: 0;
     margin: 0;
 }
 
-.page2-header .links > .table > .column-one {
+.page2-header .links>.table>.column-one {
     text-align: right;
 }
 
-.page2-header .links > .table > .column-two {
+.page2-header .links>.table>.column-two {
     text-align: left;
 }
 
@@ -343,22 +284,21 @@ details > ul {
     padding: 10px;
     font-family: 'Courier New', monospace;
     font-size: 14px;
-  }
-  
-  .code-snippet pre {
+}
+
+.code-snippet pre {
     padding: 10px;
     border-radius: 4px;
     color: #000;
     white-space: pre-wrap;
     overflow-x: auto;
     background-color: #ccc;
-  }
+}
 
- .code-snippet pre code {
+.code-snippet pre code {
     display: block;
-  }
+}
 
-  .resume-headline {
+.resume-headline {
     display: none;
-  }
-  
+}
