--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -5,16 +5,17 @@
     <div class="cover-letter-content">
         <p>Dear Hiring Manager,</p>
         <p>I would like to introduce myself. My name is Tom DeMay. I am a Principal Software Engineer and Manager with
-            Altamira Technologies Corporation working primarily in the national security space. I would like to tell
-            you a little bit about me and why I feel I would be a great addition to your company. </p>
+            Altamira Technologies Corporation working primarily in the national security space, holding an active Top
+            Secret security clearance. I would like to tell
+            you a little bit about me and why I feel I would be a great addition to your company.</p>
         <p>I have been a Software Engineer for over 30 years with a tremendously wide range of experiences;
-            as an individual contributor, technical lead, and management. Ultimately I am a hands on engineer.
+            as an individual contributor, technical lead, and management. Ultimately I am a hands-on engineer.
             I am much more than just a coder. I am a problem solver. Bring whatever problem you have to me and
-            I will own it from inception to completion. I will build the necessary tools, systems and teams and
+            I will own it from inception to completion. I will build the necessary tools, systems, and teams and
             lead them to accomplish any goal.</p>
         <p>I have a passion for the software factory process. I always look for ways to be more efficient, write
             maintainable code, improve team and organization communication, deliver consistent and reliable
-            estimates and mentor junior developers. I refactor relentlessly.</p>
+            estimates, and mentor junior developers. I refactor relentlessly.</p>
         <p>I aggressively acquire new skills and am constantly learning. Fresh out of high school in 1989, I studied and
             passed the Series 6 and 63 licenses to sell securities within two months. In 2000, I earned my private
             pilot's license in three months after my first flight lesson, completing the ground school on my own. Since
@@ -30,23 +31,23 @@
             operate and claims to be the largest supplier of gaming equipment, as many of its competitors have come and
             gone.
         </p>
-        <p>I have a reputation for having high standards, writing well designed code that is maintainable and I
+        <p>I have a reputation for having high standards, writing well-designed code that is maintainable, and I
             work well with others. I maintain a great relationship with all my previous managers and co-workers and
-            enjoy collaborating with other team mates I can learn from. I received numerous awards for bailing out a
+            enjoy collaborating with other teammates I can learn from. I received numerous awards for bailing out a
             number of failing projects. I mentor and develop the skills of junior and struggling engineers. I enjoy
-            refactoring code. In one case I improved performance by 3,951%. In that particular case, code that
+            refactoring code. In one case, I improved performance by 3,951%. In that particular case, code that
             initially took 6 hours to run before it failed, consuming all the computer's resources and crashing,
             was refactored to complete in 6 minutes using only 40MB of memory. </p>
         <p>As you can see, I am an aggressive learner and have a passion for continued education. Rust, GoLang, C/C++,
             C# .NET, Java, Python, Website development, SQL and NoSQL, various back end databases, and
             cloud computing are just a few of the tech stacks I have taught myself. I am currently working on
             web applications with Java, Spring Boot, and React.js and currently working towards my
-            AWS and Azure certifications</p>
+            AWS and Azure certifications.</p>
         <p>As you can tell I am very proud of my history and accomplishments. I am excited to share with you my
-            many success stories and even some not so successful stories that became learning opportunities for
+            many success stories and even some not-so-successful stories that became learning opportunities for
             me. I honestly believe I can fit in well in any organization in a variety of different roles due to
             my passion for software engineering and learning. I am open to any kind of development. Above
-            all, I like being creative, collaborating with others and learning, which I believe would to be a
+            all, I like being creative, collaborating with others, and learning, which I believe would be a
             tremendous asset to your organization.</p>
         <p>Thank you for your time and your consideration. Sincerely,</p>
         <br />
